--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
